// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateStepFile > should match snapshot 1`] = `
"import { step } from '@novu/framework/step-resolver';
import { render } from '@react-email/components';
import EmailTemplate from '../emails/welcome';

export const workflowId = 'onboarding';

export default step.email('welcome-email', async (controls, { payload, subscriber, context, steps }) => ({
  subject: controls.subject ?? payload.subject ?? 'No Subject',
  body: await render(
    <EmailTemplate
      {...payload}
      subscriber={subscriber}
      context={context}
      steps={steps}
      controls={controls}
    />
  ),
}));
"
`;

exports[`generateStepFile > should match snapshot with different import paths > nested-import 1`] = `
"import { step } from '@novu/framework/step-resolver';
import { render } from '@react-email/components';
import EmailTemplate from '../../src/emails/welcome';

export const workflowId = 'onboarding';

export default step.email('welcome-email', async (controls, { payload, subscriber, context, steps }) => ({
  subject: controls.subject ?? payload.subject ?? 'No Subject',
  body: await render(
    <EmailTemplate
      {...payload}
      subscriber={subscriber}
      context={context}
      steps={steps}
      controls={controls}
    />
  ),
}));
"
`;

exports[`generateStepFile > should match snapshot with different import paths > relative-import 1`] = `
"import { step } from '@novu/framework/step-resolver';
import { render } from '@react-email/components';
import EmailTemplate from './emails/welcome';

export const workflowId = 'onboarding';

export default step.email('welcome-email', async (controls, { payload, subscriber, context, steps }) => ({
  subject: controls.subject ?? payload.subject ?? 'No Subject',
  body: await render(
    <EmailTemplate
      {...payload}
      subscriber={subscriber}
      context={context}
      steps={steps}
      controls={controls}
    />
  ),
}));
"
`;

exports[`generateStepFile > should match snapshot with subject > with-subject 1`] = `
"import { step } from '@novu/framework/step-resolver';
import { render } from '@react-email/components';
import EmailTemplate from '../emails/welcome';

export const workflowId = 'onboarding';

export default step.email('welcome-email', async (controls, { payload, subscriber, context, steps }) => ({
  subject: controls.subject ?? payload.subject ?? 'Welcome to Acme!',
  body: await render(
    <EmailTemplate
      {...payload}
      subscriber={subscriber}
      context={context}
      steps={steps}
      controls={controls}
    />
  ),
}));
"
`;
